# evaluation-bias-detection-and-mitigation

./: .gitignore  README.md  bias_detection_synthesized.ipynb  datagen.py  df_bias_20.csv  df_bias_25.csv  df_bias_5.csv  df_metrics_20.csv  df_metrics_25.csv  df_metrics_5.csv  highly correlated.ipynb  multiple_runs.ipynb  notebook.ipynb  notebook_cleaned.ipynb  notebook_cleaned_pdf.ipynb  notebook_skewness.ipynb  notebook_subsampling.ipynb  plots.ipynb  pre-synthesized.ipynb  pre_synthesized.ipynb  preprocessing.ipynb  pyproject.toml  reweighting.ipynb  thesis.ipynb  utils.py  utils_fairness.py  utils_synthesization.py
data/: data_to_synthesize.csv  synthetic_data_CTGANSynthesizer.csv  synthetic_data_CopulaGANSynthesizer.csv  synthetic_data_DataSynthesizer_independent_attribute_mode.csv  synthetic_data_DataSynthesizer_random_mode_mode.csv  synthetic_data_GaussianCopulaSynthesizer.csv  synthetic_data_TVAESynthesizer.csv  testset.json
data/DataSynthesizer/: correlated_attribute_mode_description.json  independent_attribute_mode_description.json  (+1 more)
data2/: data_to_synthesize.csv  synthetic_data_CTGANSynthesizer.csv  synthetic_data_CopulaGANSynthesizer.csv  synthetic_data_DataSynthesizer_correlated_attribute_mode.csv  synthetic_data_GaussianCopulaSynthesizer.csv  synthetic_data_TVAESynthesizer.csv  testset.csv  testset.json  trainset.csv
results/: fairness_metrics_25_iterations_synthetic.json  fairness_metrics_original.json  fairness_metrics_original_cleaned.json  fairness_metrics_original_pdf.json  fairness_metrics_skewed.json  fairness_metrics_synthetic.json  fairness_metrics_synthetic_cleaned.json  fairness_metrics_synthetic_pdf.json  utility_metrics_25_iterations_synthetic.json
(+8 files in other folders)
