[tool.poetry]
name = "BA"
version = "0.1.0"
description = ""
authors = ["Max Kleinegger <mkleinegger@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
aif360 = "^0.6.1"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
matplotlib = "^3.9.0"
datasynthesizer = "^0.1.13"
sdv = "^1.13.1"
nbformat = "^5.10.4"
pomegranate = "^1.0.4"
sdmetrics = "^0.14.1"
anonymeter = "^1.0.0"
ipykernel = "^6.29.4"
ranger = "^0.10"
rpy2 = "^3.5.16"
fairlearn = "^0.10.0"
infairness = "^0.2.3"
tensorflow = "^2.16.1"
torch = "^2.3.0"
skorch = "^0.15.0"
fairlens = "^0.1.0"
scipy = "1.11.4"
mlxtend = "^0.23.1"
colorama = "^0.4.6"
dython = "^0.7.6"
igraph = "^0.11.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
